Remove icon set selection from Windows and Mac builds

BUG: 435752
FIXED-IN: 5.1.2