kmymoney/dialogs/settings/ksettingskmymoney.cpp
@@ -34,7 +34,9 @@ KSettingsKMyMoney::KSettingsKMyMoney(QWidget *parent, const QString &name, KCore
     const auto schedulesPage = new KSettingsSchedules();
     const auto colorsPage = new KSettingsColors();
     const auto fontsPage = new KSettingsFonts();
+#if not defined(Q_OS_MACOS) and not defined(Q_OS_WIN)
     const auto iconsPage = new KSettingsIcons();
+#endif
     const auto onlineQuotesPage = new KSettingsOnlineQuotes();
     const auto pluginsPage = new KSettingsPlugins();
 
@@ -45,13 +47,17 @@ KSettingsKMyMoney::KSettingsKMyMoney(QWidget *parent, const QString &name, KCore
     addPage(onlineQuotesPage, i18n("Online Quotes"), Icons::get(Icon::PreferencesNetwork).name());
     addPage(colorsPage, i18n("Colors"), Icons::get(Icon::PreferencesColors).name());
     addPage(fontsPage, i18n("Fonts"), Icons::get(Icon::PreferencesFonts).name());
+#if not defined(Q_OS_MACOS) and not defined(Q_OS_WIN)
     addPage(iconsPage, i18n("Icons"), Icons::get(Icon::PreferencesIcons).name());
+#endif
     addPage(pluginsPage, i18n("Plugins"), Icons::get(Icon::PreferencesPlugins).name(), QString(), false);
 
     setHelp("details.settings", "kmymoney");
 
     connect(this, &KConfigDialog::rejected, schedulesPage, &KSettingsSchedules::slotResetRegion);
+#if not defined(Q_OS_MACOS) and not defined(Q_OS_WIN)
     connect(this, &KConfigDialog::rejected, iconsPage, &KSettingsIcons::slotResetTheme);
+#endif
     connect(this, &KConfigDialog::settingsChanged, generalPage, &KSettingsGeneral::slotUpdateEquitiesVisibility);
 
     auto defaultButton = button(QDialogButtonBox::RestoreDefaults);
